# Inventory-Management-AGV

./: CMakeLists.txt  LICENSE  README.md  package.xml
.github/workflows/: ci_v2.yml
docs/html/: _c_make_lists_8txt.html  _r_e_a_d_m_e_8md.html  annotated.html  class_manipulation-members.html  class_manipulation.html  class_my_tiago-members.html  class_my_tiago.html  class_my_tiago__coll__graph.map  class_my_tiago__coll__graph.md5  class_navigation-members.html  class_navigation.html  class_object-members.html  class_object.html  class_package_detector-members.html  class_package_detector.html  classes.html  cppcheck_8txt.html  cpplint_8txt.html  dir_000002_000000.html  dir_000003_000000.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_13e138d54eb8818da29c3992edef070a_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  dir_fec02fa399cf056922e92647fc79bf11.html  files.html  functions.html  functions_enum.html  functions_eval.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  globals_type.html  globals_vars.html  graph_legend.html  index.html  main_8cpp.html  (+72 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_6.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  (+17 more)
docs/latex/: _c_make_lists_8txt.tex  _r_e_a_d_m_e_8md.tex  annotated.tex  class_manipulation.tex  class_my_tiago.tex  class_my_tiago__coll__graph.md5  class_navigation.tex  class_object.tex  class_package_detector.tex  cppcheck_8txt.tex  cpplint_8txt.tex  dir_13e138d54eb8818da29c3992edef070a.tex  dir_13e138d54eb8818da29c3992edef070a_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  dir_fec02fa399cf056922e92647fc79bf11.tex  files.tex  main_8cpp.tex  main_8cpp__incl.md5  manipulation_8cpp.tex  manipulation_8cpp__incl.md5  manipulation_8hpp.tex  manipulation_8hpp__dep__incl.md5  manipulation_8hpp__incl.md5  md__media_okritvik__n_s_s_d__inventory-_management-_a_g_v__r_e_a_d_m_e.tex  my__tiago_8cpp.tex  my__tiago_8cpp__incl.md5  my__tiago_8hpp.tex  my__tiago_8hpp__dep__incl.md5  my__tiago_8hpp__incl.md5  navigation_8cpp.tex  navigation_8cpp__incl.md5  navigation_8hpp.tex  navigation_8hpp__dep__incl.md5  navigation_8hpp__incl.md5  object_8cpp.tex  object_8cpp__incl.md5  object_8hpp.tex  object_8hpp__dep__incl.md5  object_8hpp__incl.md5  (+14 more)
include/: manipulation.hpp  my_tiago.hpp  navigation.hpp  object.hpp  perception.hpp
launch/: tiago_launch.launch
results/: cppcheck.txt  cpplint.txt
src/: manipulation.cpp  my_tiago.cpp  navigation.cpp  object.cpp  perception.cpp
test/: main.cpp  main_test.test  test_manipulation.cpp  test_navigation.cpp  test_object.cpp  test_perception.cpp
