<?xml version="1.0"?>
<package format="2">
  <name>im_agv</name>
  <version>0.0.0</version>
  <description>This package involves the simulation of pick and place  of
  a delivery package by a mobile robot in ROS1. </description>

  <maintainer email="poinavenkatasairam@gmail.com">sairam polina</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  
  <build_depend>rostest</build_depend>
  
</package>
